styled accordion and searchbar, fixed spacing in accordion and panels

--- a/static/css/create_note.css
+++ b/static/css/create_note.css
@@ -15,8 +15,20 @@
   margin-right: 10%;
   padding: 0.5%;
 }
-.submit{
-  margin-top: 1%;
+.save{
+  padding-left: 1%;
+  padding-right: 1%;
+  padding-bottom: 0.5%;
+  padding-top: 0.5%;
+  font-size: medium;
+  background-color: #2BA3E2;
+  color: #fff;
+  border-radius: 5px;
+  border: 0;
+}
+.buttons-container{
+  margin-top: 3%;
+  padding: 1%;
 }
 .create-collection{
   background-color: #0E6BA8;
@@ -28,17 +40,14 @@
   border-radius: 500px;
   margin-right: 2%;
 }
-
 /* The switch - the box around the slider */
 .switch {
   position: relative;
   display: inline-block;
   width: 60px;
   height: 34px;
+  margin-left: 5%;
 }
-
-
-
 /* The slider */
 .slider {
   position: absolute;
@@ -51,7 +60,6 @@
   -webkit-transition: .4s;
   transition: .4s;
 }
-
 .slider:before {
   position: absolute;
   content: "";
